--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
   
   </body>
   
+
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script src='js/main.js'></script>
+  <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
+  <script src='js/drawing.js'></script>
 </html>
