--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
     <link rel='stylesheet' href='css/main.css'>
   </head>
   <body>
-  
+
+  <div class="gamePanel">
+    <canvas id="demoCanvas" width="500" height="300"></canvas>
+  </div>
+
+  <div class="codingPanel">
+
+  </div>
+
   </body>
-  
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script src='js/main.js'></script>
