Initial Panel Setup

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <link rel='stylesheet' href='css/main.css'>
   </head>
   <body>
-  <div class="gamePanel">
+  <div class="gamePanel mainPanel">
     <canvas id="demoCanvas" width="500" height="300"></canvas>
   </div>
 
-  <div class="codingPanel">
+  <div class="codingPanel mainPanel">
     <div id='editor'>
       
     </div>
@@ -23,6 +23,7 @@
 
   <script src='js/main.js'></script>
 
+  <!-- Scripts for game panel -->
   <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
   <script src='js/drawing.js'></script>
 </html>
