--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
   <div class="gamePanel mainPanel">
-    <canvas id="demoCanvas" width="500" height="300"></canvas>
+    <canvas id="gameCanvas"></canvas>
   </div>
 
   <div class="codingPanel mainPanel">
