Code editor executes globally

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </div>
 
   <div class="codingPanel mainPanel">
-    <div id='editor'>
-      
+    <div id='editor'></div>
+    <div id='editor_bar'>
+      <button id='run'>Run Code ></button>
     </div>
   </div>
 
@@ -20,6 +21,8 @@
   <!-- Script for code editor -->
   <script src='lib/ace.js'></script>
   <script src='js/editor.js'></script>
+
+  <script src='js/readfile.js'></script>
 
   <script src='js/main.js'></script>
 
