intergrated Sams work and mine

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   <script src='js/editor.js'></script>
 
   <script src='js/main.js'></script>
+  
+	<script>
+	  var p = new Person(1,1);
+    var player = new Commands(p)
+	</script>
 
   <!-- Scripts for game panel -->
   <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
