Added player graphic file

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
   <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
   <script src='js/drawing/map.js'></script>
   <script src='js/drawing/GridCell.js'></script>
+  <script src='js/drawing/PlayerGraphic.js'></script>
   <script src='js/drawing/drawing.js'></script>
 </html>
