Fixed player rendering issue

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
   <script src='js/main.js'></script>
   
 	<script>
+    var p, player;
     function main() {
       console.log(playerGraphic);
-	    var p = new Person(1, 1, playerGraphic);
-      var player = new Commands(p);
+	    p = new Person(1, 1, playerGraphic);
+      player = new Commands(p);
     }
 	</script>
 
