--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 
   <!-- Scripts for game panel -->
   <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-  <script src='js/drawing/map.js'></script>
+  <script src='js/drawing/LevelsDictionary.js'></script>
+  <script src='js/drawing/level.js'></script>
+  <script src='js/drawing/utils.js'></script>
+  <script src='js/drawing/image.js'></script>
+  <script src='js/drawing/sprites.js'></script>
   <script src='js/drawing/GridCell.js'></script>
   <script src='js/drawing/PlayerGraphic.js'></script>
   <script src='js/drawing/drawing.js'></script>
