Added typed.js plugin

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	</script>
 
   <!-- Scripts for game panel -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js"></script>
   <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
   <script src='js/drawing/LevelsDictionary.js'></script>
   <script src='js/drawing/level.js'></script>
