added pickup items

--- a/index.html
+++ b/index.html
@@ -42,5 +42,7 @@
   <script src='js/drawing/sprites.js'></script>
   <script src='js/drawing/GridCell.js'></script>
   <script src='js/drawing/PlayerGraphic.js'></script>
+  <script src='js/drawing/LavaGraphic.js'></script>
+  <script src='js/drawing/PickupGraphic.js'></script>
   <script src='js/drawing/drawing.js'></script>
 </html>
