fixed rendering order

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       console.log(playerGraphic);
 	    p = new Person(1, 1, playerGraphic);
       player = new Commands(p);
+      window.requestAnimationFrame(render);
     }
 	</script>
 
