--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <div class="gameMessageContainer">
         <img class="speakerImage" src="./img/pikachu.png">
         <span class="gameMessage"></span>
+        <button class="nextLevel">Continue</button>
       </div>
     </div>
   </div>
