--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
  
   <!-- Script for code editor -->
-  <script src='lib/ace.js'></script>
+  <script src='lib/ace.min.js'></script>
   <script src='js/editor.js'></script>
 
   <script src='js/main.js'></script>
