Set editor execution overlay

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <div id='editor_bar'>
       <button id='run'>Run Code ></button>
     </div>
+    <div class="editorOverlay">
+      <div class="editorOverlayCenter">
+        <h2>Code Executing</h2>
+        <div class="loader">Loading...</div>
+      </div>
+    </div>
   </div>
 
   </body>
@@ -57,4 +63,8 @@
   <script src='js/drawing/PickupGraphic.js'></script>
   <script src='js/drawing/drawing.js'></script>
   <script src='js/drawing/level.js'></script>
+
+
+
+
 </html>
