Added ability to freeze the editor whilst waiting for the level start text to read out

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="editorOverlay">
       <div class="editorOverlayCenter">
-        <h2>Code Executing</h2>
+        <h2 class="editorOverlayText">Executing Code...</h2>
         <div class="loader">Loading...</div>
       </div>
     </div>
