Working on level over panel, added rainbow text

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
     </div>
   </div>
 
+  <div class="levelOverPanel">
+    <h1 class="congrats">Congratulations!</h1>
+    <h2 id="levelCleared"></h2>
+    <b>
+
+      <script>
+
+      </script>
+    </b>
+  </div>
+
   </body>
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
@@ -37,8 +48,10 @@
   <script src='js/editor.js'></script>
 
   <script src='js/main.js'></script>
-    
-	  <script>
+  <script src='js/rainbowText.js'></script>
+
+
+  <script>
     var p, player;
     function main() {
       console.log(playerGraphic);
