Added congratulations screen & endingText applied to the level dictionary

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       <div class="gameMessageContainer">
         <img class="speakerImage" src="./img/pikachu.png">
         <span class="gameMessage"></span>
-        <button class="nextLevel">Continue</button>
       </div>
     </div>
   </div>
@@ -31,12 +30,13 @@
   <div class="levelOverPanel">
     <h1 class="congrats">Congratulations!</h1>
     <h2 id="levelCleared"></h2>
-    <b>
-
-      <script>
-
-      </script>
-    </b>
+    <div class="gameMessagePanel">
+      <div class="gameMessageContainer">
+        <img class="speakerImage" src="./img/pikachu.png">
+        <span class="gameMessage"></span>
+      </div>
+    </div>
+    <button class="nextLevel">Continue</button>
   </div>
 
   </body>
