--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   <script src='js/drawing/PickupGraphic.js'></script>
   <script src='js/drawing/drawing.js'></script>
   <script src='js/drawing/level.js'></script>
+  <script src='js/potions.js'></script>
 
 
 
