Working on removing player from battle and boss functionality

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel='stylesheet' href='css/main.css'>
   </head>
   <body>
+  <span id="bossTimer"></span>
+
   <div class="gamePanel mainPanel">
     <canvas id="gameCanvas"></canvas>
     <div class="bossPanel">
@@ -58,7 +60,6 @@
 
   <script src='js/main.js'></script>
   <script src='js/rainbowText.js'></script>
-  <script src='js/bossBattle.js'></script>
 
 
   <script>
@@ -87,8 +88,6 @@
   <script src='js/drawing/drawing.js'></script>
   <script src='js/drawing/level.js'></script>
   <script src='js/potions.js'></script>
-
-
-
+  <script src='js/bossBattle.js'></script>
 
 </html>
