Added timer functionality

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <link rel='stylesheet' href='css/main.css'>
   </head>
   <body>
-  <span id="bossTimer"></span>
 
   <div class="gamePanel mainPanel">
+    <div id="bossTimer"></div>
     <canvas id="gameCanvas"></canvas>
     <div class="bossPanel">
       <div class="healthBar">
