--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
   <script src='js/drawing/GridCell.js'></script>
   <script src='js/drawing/PlayerGraphic.js'></script>
   <script src='js/drawing/LavaGraphic.js'></script>
+  <script src='js/drawing/PotionGraphic.js'></script>
   <script src='js/drawing/PickupGraphic.js'></script>
   <script src='js/drawing/drawing.js'></script>
   <script src='js/drawing/level.js'></script>
