--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   </head>
   <body>
 
+  <div class="messageOverlay">
+    <h1>Incorrect Answer</h1>
+    <h2>2 chances remaining</h2>
+  </div>
+
   <div class="gamePanel mainPanel">
     <canvas id="gameCanvas"></canvas>
     <div class="bossPanel">
