Added stage at top left and fixed multiple timers

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   </div>
 
   <div class="gamePanel mainPanel">
+    <div class="stagePanel">
+      <button class="previousLevel"><--</button>
+      <span class="stageNumber">Level 1</span>
+    </div>
     <canvas id="gameCanvas"></canvas>
     <div class="bossPanel">
       <div class="healthBar">
